# ChangeLog for dev-java/tomcat-native
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-native/ChangeLog,v 1.13 2008/02/15 19:49:17 wltjr Exp $

*tomcat-native-1.1.13 (15 Feb 2008)

  15 Feb 2008; William L. Thomson Jr. <wltjr@gentoo.org>
  +tomcat-native-1.1.13.ebuild:
  Bumped to latest release

*tomcat-native-1.1.12 (15 Jan 2008)

  15 Jan 2008; William L. Thomson Jr. <wltjr@gentoo.org>
  +tomcat-native-1.1.12.ebuild:
  Bumped to latest release

  12 Oct 2007; Christian Faulhammer <opfer@gentoo.org> ChangeLog:
  stable x86, security bug 195576

  12 Oct 2007; Dawid Węgliński <cla@gentoo.org>
  tomcat-native-1.1.10.ebuild:
  Stable on x86 (bug #195576)

  12 Oct 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  tomcat-native-1.1.8.ebuild, tomcat-native-1.1.10.ebuild:
  amd64 stable, bug #195576. Added quotes.

  10 Jul 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  tomcat-native-1.1.8.ebuild, tomcat-native-1.1.10.ebuild:
  Added rdep of jre per bug #181668

*tomcat-native-1.1.10 (22 May 2007)

  22 May 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  +tomcat-native-1.1.10.ebuild:
  Bumped to latest release.

  12 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  tomcat-native-1.1.8.ebuild:
  stable amd64, bug 168287

  13 Mar 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  tomcat-native-1.1.8.ebuild:
  Corrected virtual deps

  26 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  tomcat-native-1.1.8.ebuild:
  stable x86; bug 168287

  28 Jan 2007; Luca Longinotti <chtekk@gentoo.org>
  tomcat-native-1.1.8.ebuild:
  Fix apr dep.

  05 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  tomcat-native-1.1.8.ebuild:
  Convert einfo to elog.

*tomcat-native-1.1.8 (05 Jan 2007)

  05 Jan 2007; William L. Thomson Jr. <wltjr@gentoo.org> +metadata.xml,
  +tomcat-native-1.1.8.ebuild:
  Initial ebuild for libtcnative-1.so, Tomcat's native APR library
