@@ -4,7 +4,7 @@ DIST tomcat-native-1.1.13-src.tar.gz 188391 RMD160 7364885502cc0358a3b739f0a9826
 DIST tomcat-native-1.1.8-src.tar.gz 174445 RMD160 0bb333973e7d177fd6d3e2dca1d0003633dfca3e SHA1 ed8a007abd5b658536caa5e5da76140d8112648a SHA256 c4924e416def6993e8ee41e9cb88346705da8f5d51be0523d7567b34530ed1c2
 EBUILD tomcat-native-1.1.10.ebuild 1134 RMD160 d288e72fafedbed9f296399bbc75b7c5e5e350be SHA1 9392b41375492a316392ea8279dfb8adf0c9567d SHA256 9c30fd2e4d21ea9349fdbc866e2af0d034c1fe289f6057719e4afcb127497059
 EBUILD tomcat-native-1.1.12.ebuild 1137 RMD160 ec74e81f2bf52efa0bfcb4d15c9710f66cb09eff SHA1 6d1319a3e365ad3ce0a69358a454e743e655fc68 SHA256 0564eca497504a5e904d362b12bfbbd42ea72ed08e79ccc50dcc71d3c0a64af2
-EBUILD tomcat-native-1.1.13.ebuild 1137 RMD160 13d61cc0336e9927a4f14d348323010a84b7edf4 SHA1 8576c6d952e842384249894447db2bfb6de55822 SHA256 7c3c80ed6f2c56a369eac3e9dfed6d1dd127d08e641860051487f3dd570ea4b5
+EBUILD tomcat-native-1.1.13-r1.ebuild 1324 RMD160 a43978ca1fec3a6a60e820071e852f8470d62fdd SHA1 0715071cef7735961b56ce317b0e84e6fd859dd2 SHA256 a721e2b762d410b7a971d1ab5d35a28f8caae8ae3fa6517c5ecd6eeb68d9b7e6
 EBUILD tomcat-native-1.1.8.ebuild 1134 RMD160 f0532c4a8cfdd7e1b59f0411cc707d2a8519ca80 SHA1 23778aab8b680e103b58c464fdf140196d46d61b SHA256 431f18441481be5b8611f0bde2aea7a425ccf3d465b95bd66fb4601f182b703a
-MISC ChangeLog 1954 RMD160 befe0fd080159a7ac39b8a08f547d4ef607490b4 SHA1 226ce9b0e83ff97a8d68c2af6c51002a1c1d96ce SHA256 e84cbebd4deb8504e00b2bc2cbae56efe3e836cb146cdf2496bb288fa901dfa9
+MISC ChangeLog 2214 RMD160 69211a97512e993935778d67504cde29abb0ff7f SHA1 a31e81421e145918eca142fe2578af9584d652d0 SHA256 2811bedb4d43633d7dcac0148fe39438155fcd9bfcd141303d0533df3fd77aef
 MISC metadata.xml 825 RMD160 1cc8173f5c1ae14d688ccf43578ff621088dd24f SHA1 f44e742a7063a22368c408e3070774dbcfacb625 SHA256 1af9155a727e8470663f21324746f6c9567af0f47fb4b63f3dadba0ee43a5eda
