@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-native/tomcat-native-1.1.13.ebuild,v 1.1 2008/02/15 19:49:17 wltjr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-native/tomcat-native-1.1.13-r1.ebuild,v 1.1 2008/02/18 00:20:13 wltjr Exp $
 
 inherit eutils java-pkg-2
 
@@ -23,6 +23,12 @@ S=${WORKDIR}/${P}-src
 
 src_compile(){
 	cd "${S}"/jni/native
+
+	# set version since upstream is slacking
+	sed -i -e 's:1.1.12:1.1.13:' tcnative.spec
+	sed -i -e 's:TCN_PATCH_VERSION       12:TCN_PATCH_VERSION       13:' \
+		include/tcn_version.h
+
 	econf --with-apr=/usr/bin/apr-1-config  \
 		--with-ssl=/usr || die "Could not configure native sources"
 	emake || die "Could not build libtcnative-1.so"
