@@ -1,6 +1,13 @@
 # ChangeLog for dev-java/tomcat-native
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-native/ChangeLog,v 1.13 2008/02/15 19:49:17 wltjr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-native/ChangeLog,v 1.14 2008/02/18 00:20:13 wltjr Exp $
+
+*tomcat-native-1.1.13-r1 (18 Feb 2008)
+
+  18 Feb 2008; William L. Thomson Jr. <wltjr@gentoo.org>
+  -tomcat-native-1.1.13.ebuild, +tomcat-native-1.1.13-r1.ebuild:
+  Added sed to set version 1.1.12 -> 1.1.13, bad upstream. Removed version
+  with wrong tagging.
 
 *tomcat-native-1.1.13 (15 Feb 2008)
 
